--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,11 @@
     "declaration": false,
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
+    "useDefineForClassFields": false,
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "target": "ES2020",
+    "module": "ES2020",
+    "lib": ["ES2020", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
