--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,14 +18,15 @@
     "moduleResolution": "bundler",
     "useDefineForClassFields": false,
     "importHelpers": true,
-    "target": "ES2020",
-    "module": "ES2020",
-    "lib": ["ES2020", "dom"]
+    "target": "es2022",
+    "module": "es2022",
+    "lib": ["es2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "useDefineForClassFields": false
   }
 }
